2009-03-20  Alpha Lam  <hclam@chromium.org>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24721

        The test in this change is just to verify a no crash.  Full tree
        dump is not necessary, so change to test to dumpAsText and update
        the affected test results.

        * fast/block/float/crash-on-absolute-positioning-expected.txt: Added.
        * fast/block/float/crash-on-absolute-positioning.html:
        * platform/mac/fast/block/float/crash-on-absolute-positioning-expected.txt: Removed.

2009-03-20  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24706
        Remove ScriptExecutionContext::encoding() since Workers do not need it.
        WorkerContext::encoding() is simply removed, while Document::encoding()
        made non-virtual and private. Workers use UTF-8 now except when instructed
        otherwise by http header. Updated test.
        Also, added test for encoding used by importScripts().

        * http/tests/workers/resources/subworker-encoded.php: Added.
        * http/tests/workers/resources/worker-encoded.php:
        * http/tests/workers/text-encoding-expected.txt:
        * http/tests/workers/text-encoding.html:

2009-03-20  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dave Hyatt.

        Test for https://bugs.webkit.org/show_bug.cgi?id=20909 REGRESSION 
        (r35318): A press release at pfizer.com does not display correctly
        - and corresponding -
        <rdar://problem/6680073>

        * http/tests/misc/generated-content-inside-table.html: Added.
        * platform/mac/http/tests/misc/generated-content-inside-table-expected.checksum: Added.
        * platform/mac/http/tests/misc/generated-content-inside-table-expected.png: Added.
        * platform/mac/http/tests/misc/generated-content-inside-table-expected.txt: Added.

2009-03-19  Alexey Proskuryakov  <ap@webkit.org>
